Mon Dec 22 17:43:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,xappy/searchconnection.py,
	  xappy/unittests/field_groups.py: Add SearchResult.grouped_data()
	  method, to return data grouped by FieldGroup.

Mon Dec 22 15:20:13 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Use new xapian packages, which include
	  geospatial stuff.
	* docs/introduction.rst,xappy/doctests/searchconnection_doctest2.txt:
	  Fix various tests to cover fixes in the similarity search
	  algorithms in xapian core - various terms which didn't really
	  contribute to the similarity are no longer produced by it.
	* xappy/searchconnection.py: Change sort-by-distance to sort in
	  increasing distance order, rather than decreasing, and keep
	  references to the bits used by the DistancePostingSource.
	* xappy/unittests/distance.py: Enable test of query_distance().

Mon Dec 22 14:16:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoints, and add
	  geospatial branch.

Mon Dec 22 14:14:44 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: Note a potential performance problem.

Sat Dec 06 18:28:43 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add "group" option to relevant data,
	  which causes all data in a group which is partly relevant to be
	  returned.
	* xappy/unittests/field_associations.py: Test new syntax for
	  building up documents.
	* xappy/unittests/field_groups.py: Test group option for
	  relevant_data().

Sat Dec 06 18:01:20 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Allow a FieldGroup, or a set of
	  parameters for making a FieldGroup, to be passed to extend().

Sat Dec 06 18:00:44 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fields.py: Correct a typo in a comment.
